--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -40,7 +40,7 @@ http {
 	server {
   		listen 443;
 
-		server_name location; # 域名
+		server_name location; https://zhwly.github.io/
 
 		# 开启https,把下面ssl的全部取消注释
 
@@ -74,7 +74,7 @@ http {
 	server {
   		listen 80;
 
-		server_name location;   # 域名
+		server_name location;   https://zhwly.github.io/
 
 		# rewrite ^(.*)$ https://$server_name$1 permanent; # 开启https
 
